--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,19 @@
- :root {
+*, ::before, ::after {
+        list-style: none;
+        box-sizing: border-box;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+        margin: 0;
+        padding: 0;
+}
+:root {
      --title-color: #2E2F42;
  }
  body {
@@ -14,10 +29,25 @@
 .site-body{
 }
 
+.container {
+        width: 1158px;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin: 0 auto;
+}
 /* Header */
 
 .site-header {
+        display: flex;
+        background-color: #FFFFFF;
+        border-bottom: 1px solid #E7E9FC;
 }
+.header-container {
+        display: flex;
+        align-items: center;
+        height: 72px;
+}
+
 .web-studio-link {
         font-family: 'Raleway';
         font-style: normal;
@@ -29,6 +59,7 @@
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4D5AE5;
+        
 }
 .link-studio {
         font-family: 'Raleway';
@@ -41,10 +72,18 @@
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #2E2F42;
+        
 }
 .header-navigation {
+        display: flex;
+        
+        
 }
 .header-list {  
+        display: flex;
+        margin-left: 76px;
+        gap: 40px;
+        
 }
 .header-item {
 }
@@ -55,12 +94,16 @@
         letter-spacing: 0.02em;
         color: #2E2F42;
 }
+.contact-info {
+        margin-left: auto;
+}
 .header-mail {
-    font-weight: 400;
+        font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+        margin-right: 40px;
 }
 .header-mail:hover {
     color: skyblue;
@@ -79,15 +122,19 @@
 /* Slogan */
 
 .slogan {
-    background: #2E2F42;
+        text-align: center;
+        justify-content: center;
+        background: #2E2F42;
 }
 .slogan-title {
         font-weight: 700;
         font-size: 56px;
         line-height: 1.07;
-        text-align: center;
         letter-spacing: 0.02em;
         color: #FFFFFF;
+        margin-bottom: 48px;
+        padding-top: 188px;
+        
 }
 .slogan-btn {
         font-family: 'Roboto', sans-serif; 
@@ -96,20 +143,33 @@
         font-size: 16px;
         line-height: 1.19;
         display: flex;
-        align-items: center;
+        display: inline-block;
+        padding: 16px 32px;
+        text-align: center;
         letter-spacing: 0.04em;
         color: #FFFFFF;
         background-color: #4D5AE5;
         cursor: pointer;
+        margin-bottom: 188px;
+        
 }
 
 /* Methodologies */
-
-.methodologies {
+.content {
 }
-.methodologies-list {
+.methodologies {     
+}
+
+.methodologies-list { 
+        display: flex;
+        flex-direction: row;
+        padding-top: 120px;
+        padding-bottom: 120px;
+        gap: 24px     
 }
 .methodologies-item {
+        width: 264px;
+        height: 104px;
 }
 .methodology-title {
         font-style: normal;
@@ -118,6 +178,7 @@
         line-height: 1.20;
         letter-spacing: 0.02em;
         color: var(--title-color);
+        margin-bottom: 8px;
 }
 .methodology-description {
         font-style: normal;
@@ -132,6 +193,10 @@
 
 .about {
 }
+.container-about {
+        padding-left: 0;
+        padding-right: 0;
+}
 .about-title {
         font-style: normal;
         font-weight: 700;
@@ -141,8 +206,13 @@
         letter-spacing: 0.02em;
         text-transform: capitalize;
         color: var(--title-color);
+        margin-bottom: 72px;
 }
 .about-list {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-bottom: 120px;
 }
 .about-item {
 }
@@ -150,6 +220,8 @@
 /* Team */
 
 .team {
+        background-color: #F4F4FD
+        
 }
 .team-title {
         font-style: normal;
@@ -160,10 +232,19 @@
         letter-spacing: 0.02em;
         text-transform: capitalize;
         color: var(--title-color);
+        padding-top: 120px;
+        margin-bottom: 72px;
 }
 .team-list {
+        display: flex;
+        gap: 24px;
+        padding-bottom: 152px;
+        
 }
 .team-item {
+        background-color: #FFFFFF;
+        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+        border-radius: 0px 0px 4px 4px;
 }
 .team-member {
         font-style: normal;
@@ -173,6 +254,8 @@
         text-align: center;
         letter-spacing: 0.02em;
         color: #2E2F42;
+        margin-top: 32px;
+        margin-bottom: 8px;
 }
 .team-position {
         font-style: normal;
@@ -182,9 +265,11 @@
         text-align: center;
         letter-spacing: 0.02em;
         color: #434455;
+        margin-bottom: 32px;
+        
 }
 .site-footer {
-    background: #2E2F42
+        background: #2E2F42
 }
 .logo-studio-link {
         font-family: 'Raleway', sans-serif;
@@ -197,6 +282,7 @@
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4D5AE5;
+        padding-top: 100px;
 }
 .studio-link {
         font-family: 'Raleway', sans-serif;
@@ -217,12 +303,27 @@
         line-height: 1.50;
         letter-spacing: 0.02em;
         color: #E7E9FC;
+        width: 264px;
+        margin-top: 16px;
+        padding-bottom: 100px;
 }
 /* Portfolio */
 
 /* Service navigation */
 
-.service-nav {}
+.service-nav { 
+        margin-top: 96px;
+        margin-bottom: 72px;        
+}
+.service-nav-list {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 24px
+}
+
+.service-nav-item {
+}
 
 .service-nav-btn {
         font-family: 'Roboto', sans-serif; 
@@ -231,24 +332,55 @@
         font-size: 16px;
         line-height: 1.50;
         display: flex;
-        align-items: center;
+        display: block;
         text-align: center;
         letter-spacing: 0.04em;
         color: #4D5AE5;
         cursor: pointer;
+        padding-top: 12px;
+        padding-right: 24px;
+        padding-bottom: 12px;
+        padding-left: 24px;
+        border: 1px solid #E7E9FC;
+        border-radius: 4px;
+        min-width: 69px;
+        min-height: 48px;
 }
+
 .service-nav-btn:hover {
     color: #FFFFFF;
-    background-color: #4D5AE5;
+    background-color: #4D5AE5;    
 }
-.service {}
+.service {      
+        background-color: #FFFFFF;
+}
+.container-service {     
+        padding-bottom: 120px;
+}
 
-.service-list {}
+.service-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap; 
+}
 
-.list {}
-
-.service-item {}
-
+.list {
+}
+.service-item {
+        margin-right: 24px;
+        margin-bottom: 48px;
+}
+.service-item:nth-child(3n) {
+        margin-right: 0;
+}
+.service-item:nth-last-child(-n+3) {
+        margin-bottom: 0;
+}
+.text-border {
+        border-left: 1px solid #E7E9FC;
+        border-right: 1px solid #E7E9FC;
+        border-bottom: 1px solid #E7E9FC;  
+}
 .service-title {
         font-style: normal;
         font-weight: 600;
@@ -256,13 +388,16 @@
         line-height: 1.20;
         letter-spacing: 0.02em;
         color: var(--title-color);
+        margin: 0px 0px 8px 16px;
+        padding-top: 32px;
 }
 
 .service-after-title {
-    font-style: normal;
+        font-style: normal;
         font-weight: 400;
         font-size: 16px;
         line-height: 1.50;
         letter-spacing: 0.02em;
         color: #434455;
+        margin: 0px 0px 32px 16px;
 }
